src/kubernetes/manifests/api-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: cloudcrawl-api
  labels:
    app: cloudcrawl
    component: api
spec:
  selector:
    app: cloudcrawl
    component: api
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
