src/kubernetes/manifests/ui-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: cloudcrawl-ui
  labels:
    app: cloudcrawl
    component: ui
spec:
  selector:
    app: cloudcrawl
    component: ui
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
